--- a/bin/latihan_pernapasan/FXMLLatihanPernapasan.fxml
+++ b/bin/latihan_pernapasan/FXMLLatihanPernapasan.fxml
@@ -90,7 +90,7 @@
             </GridPane>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
                <children>
-                  <Button prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: c3b390;" text="Mulai Latihan" textFill="#36290c">
+                  <Button onAction="#mulaiButton" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: c3b390;" text="Mulai Latihan" textFill="#36290c">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Button>
