--- a/src/main_page/FXMLMainPage.fxml
+++ b/src/main_page/FXMLMainPage.fxml
@@ -12,7 +12,7 @@
    <children>
       <ImageView fitHeight="560.0" fitWidth="1071.0" layoutX="-120.0" layoutY="-5.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../WhatsApp%20Image%202025-07-03%20at%2017.23.59.jpeg" />
+            <Image url="@WhatsApp%20Image%202025-07-03%20at%2017.23.59.jpeg" />
          </image>
       </ImageView>
       <BorderPane fx:id="mainPane" layoutX="10.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="549.0" prefWidth="867.0">
