--- a/src/jadwal_latihan/FXMLJadwalLatihan.fxml
+++ b/src/jadwal_latihan/FXMLJadwalLatihan.fxml
@@ -128,7 +128,7 @@
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Button>
-                  <Button onAction="#LangsungLatihanButton" prefHeight="35.0" prefWidth="100.0" style="-fx-background-color: c3b390;" text="Mulai Latihan" textFill="#36290c">
+                  <Button onAction="#langsungLatihanButton" prefHeight="35.0" prefWidth="100.0" style="-fx-background-color: c3b390;" text="Mulai Latihan" textFill="#36290c">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
