--- a/src/latihan_pernapasan/FXMLLatihanPernapasan.fxml
+++ b/src/latihan_pernapasan/FXMLLatihanPernapasan.fxml
@@ -64,11 +64,11 @@
                   <HBox alignment="CENTER_LEFT" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <children>
                         <Label text="Tarik (detik):" textFill="#36290c" />
-                        <TextField fx:id="tarikNapasField" prefWidth="70.0" promptText="0" />
+                        <TextField fx:id="tfTarik" prefWidth="70.0" promptText="0" />
                         <Label text="Tahan (detik):" textFill="#36290c" />
-                        <TextField fx:id="tahanNapasField" prefWidth="70.0" promptText="0" />
+                        <TextField fx:id="tfTahan" prefWidth="70.0" promptText="0" />
                         <Label text="Buang (detik):" textFill="#36290c" />
-                        <TextField fx:id="buangNapasField" prefWidth="70.0" promptText="0" />
+                        <TextField fx:id="tfBuang" prefWidth="70.0" promptText="0" />
                      </children>
                   </HBox>
                   <Label text="Musik Latar:" textFill="#36290c" GridPane.rowIndex="3">
