--- a/src/chart/FXMLChart.fxml
+++ b/src/chart/FXMLChart.fxml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.chart.BarChart?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -29,17 +27,7 @@
                   <Insets top="10.0" />
                </VBox.margin>
             </Label>
-            <BarChart fx:id="barChartDurasi" prefHeight="400.0" prefWidth="700.0">
-              <xAxis>
-                <CategoryAxis label="Sesi Latihan" side="BOTTOM" fx:id="xAxis" />
-              </xAxis>
-              <yAxis>
-                <NumberAxis fx:id="yAxis" label="Durasi (Menit)" side="LEFT" />
-              </yAxis>
-               <VBox.margin>
-                  <Insets left="20.0" right="20.0" />
-               </VBox.margin>
-            </BarChart>
+            <PieChart fx:id="chartGejala" prefHeight="516.0" prefWidth="697.0" />
             <Button onAction="#kembaliButton" prefHeight="35.0" prefWidth="100.0" style="-fx-background-color: c3b390;" text="Kembali" textFill="#36290c">
                <font>
                   <Font name="System Bold" size="12.0" />
