--- a/src/main_latihanpernapasan/FXMLMulaiLatihan.fxml
+++ b/src/main_latihanpernapasan/FXMLMulaiLatihan.fxml
@@ -3,14 +3,12 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="rootPane" prefHeight="683.0" prefWidth="807.0" style="-fx-background-color: #2D0F5E;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main_latihanpernapasan.FXMLMulaiLatihanController">
+<AnchorPane fx:id="rootPane" prefHeight="698.0" prefWidth="807.0" style="-fx-background-color: #2D0F5E;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main_latihanpernapasan.FXMLMulaiLatihanController">
    <children>
       <HBox alignment="CENTER_LEFT" layoutY="0.0" prefHeight="50.0" prefWidth="375.0" spacing="10" style="-fx-background-color: transparent;">
          <padding>
@@ -18,15 +16,6 @@
          </padding>
          <children>
             <Button onAction="#goBack" onDragDetected="#goBack" style="-fx-background-color: #A797E0; -fx-background-radius: 50;" text="Kembali" textFill="WHITE" />
-            <HBox alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS">
-                <children>
-                    <ImageView fitHeight="20" fitWidth="20" pickOnBounds="true" preserveRatio="true">
-                        <image>
-                            <Image url="@wifi_icon.png" />
-                        </image>
-                    </ImageView>
-                </children>
-            </HBox>
          </children>
       </HBox>
 
@@ -44,7 +33,7 @@
          </children>
       </VBox>
 
-      <VBox alignment="TOP_CENTER" layoutX="223.0" layoutY="272.0" prefHeight="512.0" prefWidth="375.0" style="-fx-background-color: #E6E0F8; -fx-background-radius: 30 30 0 0;">
+      <VBox alignment="TOP_CENTER" layoutX="226.0" layoutY="293.0" prefHeight="405.0" prefWidth="375.0" style="-fx-background-color: #E6E0F8; -fx-background-radius: 30 30 0 0;">
          <padding>
             <Insets top="30.0" />
          </padding>
@@ -57,7 +46,7 @@
                   <Insets bottom="10.0" />
                </VBox.margin>
             </Label>
-            <Label alignment="CENTER" prefHeight="16.0" prefWidth="243.0" text="Tetesan suara air hujan yang" textFill="#5E3FBE">
+            <Label alignment="CENTER" prefHeight="16.0" prefWidth="243.0" text="Suara tetesan air hujan yang" textFill="#5E3FBE">
                <font>
                   <Font size="18.0" />
                </font>
