--- a/src/jadwal_latihan/FXMLJadwalLatihan.fxml
+++ b/src/jadwal_latihan/FXMLJadwalLatihan.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="627.0" prefWidth="729.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jadwal_latihan.JadwalLatihanController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="555.0" prefWidth="875.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jadwal_latihan.JadwalLatihanController">
    <children>
       <ImageView fitHeight="700.0" fitWidth="1291.0" layoutX="-183.0" layoutY="-67.0" pickOnBounds="true" preserveRatio="true">
          <image>
