--- a/src/latihan_pernapasan/FXMLLatihanPernapasan.fxml
+++ b/src/latihan_pernapasan/FXMLLatihanPernapasan.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="latihan_pernapasan.LatihanPernapasanController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="555.0" prefWidth="875.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="latihan_pernapasan.LatihanPernapasanController">
    <children>
       <ImageView fitHeight="814.0" fitWidth="1412.0" layoutX="-355.0" layoutY="-158.0" pickOnBounds="true" preserveRatio="true">
          <image>
