--- a/src/main_latihanpernapasan/FXMLMulaiLatihan.fxml
+++ b/src/main_latihanpernapasan/FXMLMulaiLatihan.fxml
@@ -3,12 +3,13 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="rootPane" prefHeight="698.0" prefWidth="807.0" style="-fx-background-color: #2D0F5E;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main_latihanpernapasan.FXMLMulaiLatihanController">
+<AnchorPane fx:id="rootPane" prefHeight="582.0" prefWidth="807.0" style="-fx-background-color: #2D0F5E;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main_latihanpernapasan.FXMLMulaiLatihanController">
    <children>
       <HBox alignment="CENTER_LEFT" layoutY="0.0" prefHeight="50.0" prefWidth="375.0" spacing="10" style="-fx-background-color: transparent;">
          <padding>
@@ -33,12 +34,12 @@
          </children>
       </VBox>
 
-      <VBox alignment="TOP_CENTER" layoutX="226.0" layoutY="293.0" prefHeight="405.0" prefWidth="375.0" style="-fx-background-color: #E6E0F8; -fx-background-radius: 30 30 0 0;">
+                  <VBox alignment="TOP_CENTER" layoutX="270.0" layoutY="229.0" prefHeight="371.0" prefWidth="267.0" style="-fx-background-color: #E6E0F8; -fx-background-radius: 30 30 0 0;">
          <padding>
             <Insets top="30.0" />
          </padding>
          <children>
-            <Label text="Hujan" textFill="#5E3FBE">
+            <Label fx:id="napasLabel" text="Hujan" textFill="#5E3FBE">
                <font>
                   <Font name="System Bold" size="30.0" />
                </font>
@@ -46,21 +47,26 @@
                   <Insets bottom="10.0" />
                </VBox.margin>
             </Label>
-            <Label alignment="CENTER" prefHeight="16.0" prefWidth="243.0" text="Suara tetesan air hujan yang" textFill="#5E3FBE">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <Label alignment="CENTER" text="membuat suasana sejuk.  " textFill="#5E3FBE">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
             <Label alignment="CENTER" textFill="#5E3FBE">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
+            <TextField fx:id="tarik" prefHeight="26.0" prefWidth="169.0" promptText="Tarik:">
+               <VBox.margin>
+                  <Insets top="30.0" />
+               </VBox.margin>
+            </TextField>
+            <TextField fx:id="tahan" promptText="Tahan:">
+               <VBox.margin>
+                  <Insets top="30.0" />
+               </VBox.margin>
+            </TextField>
+            <TextField fx:id="buang" promptText="Buang:">
+               <VBox.margin>
+                  <Insets top="30.0" />
+               </VBox.margin>
+            </TextField>
             <Label alignment="CENTER" textFill="#5E3FBE">
                <font>
                   <Font size="18.0" />
@@ -69,42 +75,16 @@
                   <Insets bottom="30.0" />
                </VBox.margin>
             </Label>
-
-            <Button style="-fx-background-color: #A797E0; -fx-background-radius: 20;" text="Sulit Tidur" textFill="WHITE">
+            <Label fx:id="durasi" text="Durasi" />
+            <Label text="napas" textFill="#050017">
                <font>
-                  <Font name="System Bold" size="16.0" />
+                  <Font size="14.0" />
                </font>
-               <padding>
-                  <Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets bottom="40.0" />
-               </VBox.margin>
-            </Button>
+            </Label>
 
-            <HBox alignment="CENTER" spacing="30.0">
+                        <HBox alignment="CENTER" spacing="30.0">
                <children>
-                  <Button onAction="#decrementNapas" prefHeight="60" prefWidth="60.0" style="-fx-background-color: #A797E0; -fx-background-radius: 50;" text="-" />
-                  <VBox alignment="CENTER">
-                     <children>
-                        <Label fx:id="napasLabel" text="10" textFill="#5E3FBE">
-                           <font>
-                              <Font name="System Bold" size="30.0" />
-                           </font>
-                        </Label>
-                        <Label text="napas" textFill="#5E3FBE">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
-                        <Label text="3 mnt" textFill="#5E3FBE">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </VBox>
-                  <Button onAction="#incrementNapas" prefHeight="60.0" prefWidth="60.0" style="-fx-background-color: #A797E0; -fx-background-radius: 50;" text="+" />
+                  <VBox alignment="CENTER" />
                </children>
             </HBox>
          </children>
